--- a/hybrid data predictive meta models.ipynb
+++ b/hybrid data predictive meta models.ipynb
@@ -72,7 +72,7 @@
     "Rather than create a new data frame from the initial predictions, we append the CNN prediction using code such as:\n",
     "\n",
     "```\n",
-    "df['CNN_prediction'] = CNN_model.predict(X)\n",
+    "df['CNN_prediction'] = CNN_model.predict(image)\n",
     "\n",
     "meta_model.predict(df)\n",
     "```\n",
@@ -80,7 +80,7 @@
     "or:\n",
     "\n",
     "```\n",
-    "meta_model.predict(pd.concat([df, CNN_model.predict(X)], axis = 1]))\n",
+    "meta_model.predict(pd.concat([df, CNN_model.predict(image)], axis = 1]))\n",
     "```\n",
     "\n",
     "This approach allows for greater interaction between the features than simply looking at the final predictions."
@@ -94,16 +94,16 @@
     "\n",
     "![](meta_model3.png)\n",
     "\n",
-    "The additional features, `CNN_feature_x` don't have an interpretation as simple as the original features (bedrooms, bathrooms, square feet), but they are features nonetheless which may be informative for our final model. They can be thought of as digested components of the image.\n",
+    "The additional features, `CNN_featurex` don't have an interpretation as simple as the original features (bedrooms, bathrooms, square feet), but they are features nonetheless which may be informative for our final model. They can be thought of as digested components of the image.\n",
     "\n",
-    "Note that we are not using the predicted output from the CNN model to make our ultimate prediction. Nevertheless, we need to train our CNN model to some target, so the predicted price from the CNN is needed at during training."
+    "Note that we are not using the predicted output from the CNN model to make our ultimate prediction (although we could, if we wanted, add that predicted value in as yet another feature column). Nevertheless, we need to train our CNN model to some target, so the predicted price from the CNN is needed at during training."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another approach would be to replace the CNN prediction model with an autoencoder trained to decompose and then recompose images. The interior of the autoencoder is a vector of features which describes the house and can be used either to reconstruct an image of the house, or to feed a final model.\n",
+    "Another approach would be to replace the CNN prediction model with an autoencoder trained to decompose and then recompose images. The interior of the autoencoder (bottleneck) is a vector of features which describes the house and can be used either to reconstruct an image of the house, or to feed a final model.\n",
     "\n",
     "![](meta_model4.png)\n",
     "\n",
@@ -111,8 +111,15 @@
     "\n",
     "As we saw in the autoencoder sprint, tensorflow allows models to be built from other models, just as from layers, so this gives us the ability to break the autoencoder into multiple parts and use the encoder portion both to feed the decoder and and to generate its own output vector.\n",
     "\n",
-    "The keras Functional API  `layers.concatenate()` method allows us to join two different vectors inside a keras model."
+    "The keras Functional API  `layers.concatenate()` method allows us to join two different vectors inside a keras model. So this process can be done either with a keras model into a pandas data frame, into an sklearn model, or entirely inside of a keras model."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
