--- a/hybrid data predictive meta models.ipynb
+++ b/hybrid data predictive meta models.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "```\n",
     "hybrid_df['prediction_1'] = regression_model.predict(X)\n",
-    "hybrid_df['prediction_2'] = CNN_model.predict(X)\n",
+    "hybrid_df['prediction_2'] = CNN_model.predict(image)\n",
     "\n",
     "meta_model.predict(hybrid_df)\n",
     "```\n",
