--- a/hybrid data predictive meta models.ipynb
+++ b/hybrid data predictive meta models.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perhaps a drawback of these last two approaches is that they over-simplify the information from the image. Here, entire image has been simplified down to just a single value (a prediction of price.) Rather than just use this one value as the only output from the CNN model, we could get a richer set of features derived from the image. Fortunately, the CNN allows us to get these values from one of the flat layers prior to the final output.\n",
+    "Perhaps a drawback of these last two approaches is that they over-simplify the information from the image. Here, the entire image has been simplified down to just a single value (a prediction of price.) Rather than just use this one value as the only output from the CNN model, we could get a richer set of features derived from the image. Fortunately, the CNN allows us to get these values from one of the flat layers prior to the final output.\n",
     "\n",
     "![](meta_model3.png)\n",
     "\n",
@@ -113,13 +113,6 @@
     "\n",
     "The keras Functional API  `layers.concatenate()` method allows us to join two different vectors inside a keras model. So this process can be done either with a keras model into a pandas data frame, into an sklearn model, or entirely inside of a keras model."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
